--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -32,8 +34,10 @@
     "next": "15.3.2",
     "openai": "^4.35.1",
     "react": "^18.3.1",
+    "react-country-flag": "^3.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
